--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ margin:10px;
 <h2>Will you be my Valentine?</h2>
 
 <div class="slideshow">
-<img id="slide" src="./photo1.jpg">
+<img id="slide" src="photo1.jpg">
 </div>
 
 <button id="yesBtn">Yes 💖</button>
@@ -185,10 +185,11 @@ document.getElementById("mainPage").classList.remove("hidden");
 
 
 /* SLIDESHOW */const images=[
-"./photo1.jpg",
-"./photo2.jpg",
-"./photo3.jpg"
+"photo1.jpg",
+"photo2.jpg",
+"photo3.jpg"
 ];
+    
 let index=0;
 
 setInterval(()=>{
@@ -270,3 +271,4 @@ setTimeout(()=>heart.remove(),6000);
 
 </body>
 </html>
+
